# MummyMuseum

./: .gitignore  CMakeLists.txt  README.md
MummyInterface/: CMakeLists.txt  MummyInterface.py
MummyInterface/Resources/Data/: Mummy1.txt  Mummy2.txt  Mummy3.txt
MummyInterface/Resources/UI/: MummyInterface.ui  MummyInterface2.ui
MummyInterface/Resources/VolRen/: MyPresets.mrml  Mypresets.mrml
